<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="division_operation">/</string>
    <string name="Square_root">Sqr</string>
    <string name="change_sign">+/-</string>
    <string name="sub_operation">-</string>
    <string name="multiply_operation">X</string>
    <string name="all_clear">AC</string>
    <string name="default_text">0</string>
    <string name="num9">9</string>
    <string name="num8">8</string>
    <string name="num7">7</string>
    <string name="num_6">6</string>
    <string name="num_5">5</string>
    <string name="num_4">4</string>
    <string name="sum_operation">+</string>
    <string name="num_3">3</string>
    <string name="equal_operation">=</string>
    <string name="float_">.</string>
    <string name="num_0">0</string>
    <string name="num_2">2</string>
    <string name="clear">C</string>
    <string name="num_1">1</string>
    <string name="divied_by_zero">Error</string>
</resources>
